[gd_scene load_steps=22 format=1]

[ext_resource path="res://scripts/game_over.gd" type="Script" id=1]
[ext_resource path="res://sprites/background.png" type="Texture" id=2]
[ext_resource path="res://scenes/star.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/sunn - title.fnt" type="BitmapFont" id=4]
[ext_resource path="res://sprites/button.png" type="Texture" id=5]
[ext_resource path="res://sprites/button_select.png" type="Texture" id=6]
[ext_resource path="res://fonts/sunn.fnt" type="BitmapFont" id=7]
[ext_resource path="res://fonts/SUNN.otf" type="DynamicFontData" id=8]

[sub_resource type="StyleBoxTexture" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 5 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 6 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxEmpty" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxTexture" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 5 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxEmpty" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=7]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="DynamicFont" id=8]

font/size = 32
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 8 )

[sub_resource type="StyleBoxEmpty" id=9]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxTexture" id=10]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 5 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=11]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 6 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxEmpty" id=12]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxTexture" id=13]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 5 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[node name="game_over" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 512.018, 301.52 )
transform/scale = Vector2( 1.00505, 0.593032 )
z/z = -3
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="star" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -199.643, -53.0356 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star1" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -128.176, -274.992 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star2" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -87.9621, -321.65 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star3" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -476.123, -86.5678 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star4" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( 206.806, -87.0502 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star5" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( 333.74, 109.472 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star6" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( 315.678, 448.581 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star7" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( 360.405, 271.711 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star8" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( 281.387, 251.498 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star9" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( 333.569, 312.139 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star10" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -168.074, -240.699 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star11" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -124.865, 430.364 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star12" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( 151.851, -373.129 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star13" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -185.761, -411.324 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star14" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( 61.3777, 378.347 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star15" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -314.583, 120.454 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star16" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -346.012, -171.739 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star17" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( 411.872, -135.215 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star18" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( 401.097, 53.4931 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star19" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -364.869, 366.992 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star20" parent="background" instance=ExtResource( 3 )]

transform/pos = Vector2( -364.869, 366.992 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="score_board" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 40.0
margin/right = 1025.0
margin/bottom = 168.0
alignment = 1

[node name="score" type="Label" parent="score_board"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 1025.0
margin/bottom = 62.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 0.901961, 0.501961, 1 )
text = "Score:"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="high_score" type="Label" parent="score_board"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 66.0
margin/right = 1025.0
margin/bottom = 128.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 0.901961, 0.501961, 1 )
text = "High Score:"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="unlock" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 178.0
margin/right = 1024.0
margin/bottom = 240.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 0.901961, 0.501961, 1 )
text = "Astro Mouse Unlocked!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="online" type="Button" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 441.0
margin/top = 302.0
margin/right = 598.0
margin/bottom = 356.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Save Online"
flat = false

[node name="LineEdit" type="LineEdit" parent="online"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = -44.0
margin/right = 180.0
margin/bottom = 12.0
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
placeholder/text = "Type your name here!"
placeholder/alpha = 0.6
max_length = 20
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="retry_button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 441.0
margin/top = 383.0
margin/right = 598.0
margin/bottom = 437.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Retry"
flat = false

[node name="quit_button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 441.0
margin/top = 460.0
margin/right = 598.0
margin/bottom = 514.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Main Menu"
flat = false

[node name="score_saved" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 263.0
margin/right = 1026.0
margin/bottom = 338.0
custom_fonts/font = ExtResource( 7 )
text = "Your score was saved successfully!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="online" to="." method="_on_online_pressed"]

[connection signal="pressed" from="retry_button" to="." method="_on_retry_button_pressed"]

[connection signal="pressed" from="quit_button" to="." method="_on_quit_button_pressed"]


